...
  TextEditingController bioController = TextEditingController();
  TextEditingController birthdateController = TextEditingController();
  TextEditingController cityController = TextEditingController();

  String? selectedFood;
  List<String> foodOptions = [
    "Pizza", "Burger", "Salad", "Sushi", "Pasta", "Taco", "Steak", "Chicken Curry", "Ramen", "Sandwich",
    "Burrito", "Fish and Chips", "Pad Thai", "Lasagna", "Fried Rice", "Pho", "Tacos", "Hot Dog", "BBQ Ribs",
    "Shrimp Scampi", "Chili", "Hamburger", "Mashed Potatoes", "Chicken Wings", "Fajitas", "Cobb Salad", "Gyro",
    "Meatloaf", "Clam Chowder", "Chicken Parmesan", "French Toast", "Fish Tacos", "Caesar Salad",
    "Beef Stroganoff", "Potato Soup", "Crab Cakes", "Stuffed Bell Peppers", "Chicken and Waffles", "Garden Salad",
    "Eggplant Parmesan", "Tuna Salad", "Pad See Ew", "Veggie Burger", "Tom Yum Soup", "Lobster Bisque", "Gnocchi",
    "Spaghetti Carbonara", "Chicken Alfredo", "Beef Tacos", "Pulled Pork Sandwich", "Miso Soup", "Shrimp Fried Rice",
...
                    counterText: '$currentBioLength/$maxBioLength',
                  ),
                  maxLines: null,
                ),
                const SizedBox(height: 20),
                ElevatedButton(
                  key: const Key('saveProfile'),
                  onPressed: () {
                    saveProfile(context);
                  },
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Theme.of(context).colorScheme.primary,
                    foregroundColor: Colors.black,
...
